--- a/index.html
+++ b/index.html
@@ -34,11 +34,17 @@
           }
 
           video {
-              position: fixed;
-              width: 30vw;
-              top: 200px;
-              right: 10vw;
-          }
+             position: fixed;
+             width: 30vw;
+             top: 90px;
+             right: 3vw;
+         }
+         video.video2 {
+            position: fixed;
+            width: 30vw;
+            top: 300px;
+            right: 20vw;
+        }
 
           a {
               z-index: 10;
@@ -53,5 +59,6 @@
         <iframe src="https://www.youtube.com/embed/rR5vmKf1pQg"></iframe>
 
         <a href="https://en.wikipedia.org/wiki/Oscar_Wilde"><video loop controls src="bubble.mp4" type="video/mp4"></video></a>
+          <a href="park2.jpg"><video class="video2" loop controls src="bubble.mp4" type="video/mp4"></video></a>
       </body>
     </html>
