--- a/index.html
+++ b/index.html
@@ -36,14 +36,8 @@
           video {
              position: fixed;
              width: 30vw;
-             top: 90px;
+             top: 300px;
              right: 3vw;
-         }
-         video.video2 {
-            position: fixed;
-            width: 30vw;
-            top: 300px;
-            right: 20vw;
         }
 
           a {
@@ -58,7 +52,6 @@
 
         <iframe src="https://www.youtube.com/embed/rR5vmKf1pQg"></iframe>
 
-        <a href="https://en.wikipedia.org/wiki/Oscar_Wilde"><video loop controls src="bubble.mp4" type="video/mp4"></video></a>
-          <a href="park2.jpg"><video class="video2" loop controls src="bubble.mp4" type="video/mp4"></video></a>
-      </body>
+        <a href="huwa.png"><video loop controls src="bubble.mp4" type="video/mp4"></video></a>
+
     </html>
