--- a/index.html
+++ b/index.html
@@ -1,20 +1,45 @@
 <!doctype html>
     <html>
       <head>
-        <link rel="stylesheet" href="/css/stylesheet.css">
+        <title>Looking at the stars</title>
+        <link rel="shortcut icon" href="star2.png">
         <style>
           body {
               position: absolute;
               color:white;
               background-color:#4B13D8;
-              border: 4px solid pink;
-              width: 300px;
-              left: 150px;
-              top: 100px;
+              border: 4px solid #D065F0;
+              width: 700px;
+              left: -10px;
+              top: 30px;
               font-size: 70px;
-              font-family: Impact;
+              font-family: fantasy;
               text-align: right;
           }
+          #two {
+             position: fixed;
+             text-transform: lowercase;
+             color: gray;
+             font-size: 21px;
+             line-height: 18px;
+             left: 50vw;
+             top:75vh;
+             font-family: times;
+             letter-spacing: 1px;
+             z-index: 10;
+           }
+           #three {
+              position: fixed;
+              text-transform: lowercase;
+              color:#545454;
+              font-size: 150px;
+              line-height: 18px;
+              left: 50vw;
+              top:10vh;
+              font-family: fantasy;
+              letter-spacing: 0px;
+              z-index: 0;
+            }
 
           img {
               position: fixed;
@@ -27,10 +52,10 @@
 
           iframe {
               position: fixed;
-              width: 20vw;
-              height: 12vw;
+              width: 30vw;
+              height: 18vw;
               top: 90px;
-              right: 43vw;
+              right: 35vw;
           }
 
           video {
@@ -46,7 +71,45 @@
         </style>
       </head>
       <body>
-        We are all in the gutter, but some of us are looking at the stars.
+        <div id=cuernocueva>DUMBY:
+
+<br>I don’t think we are bad. I think we are all good, except Tuppy.
+
+<br>LORD DARLINGTON:
+
+<br>No, we are all in the gutter, but some of us are looking at the stars.
+
+<br>DUMBY:
+
+<br>We are all in the gutter, but some of us are looking at the stars? Upon my word, you are very romantic tonight, Darlington.
+
+<br>CECIL GRAHAM:
+
+<br>Too romantic! You must be in love. Who is the girl?</div>
+
+        <div id=two>‘We are all in the gutter, but some of us are looking at the stars’
+          this oft-quoted line from Oscar Wilde was not spoken by Wilde during conversation,
+          <br>as so many of his witty lines were.
+          <br>Instead, ‘we are all in the gutter, but some of us are looking at the stars’
+          <br>is uttered by one of Wilde’s characters in his play,
+          <br>Lady Windermere’s Fan.
+          <br>But what is the meaning of this pithy and strangely beautiful line?</div>
+
+          <div id=three>And this early theatrical success
+            <br>for Wilde has more than its fair share of quips,
+            <br>many of which are still well-known:
+            <br>‘I can resist everything except temptation’,
+            <br>‘a man who knows the price of everything
+            <br>and the value of nothing’
+            <br>(a definition of a cynic),
+            <br>and ‘experience is the name
+            <br>everyone gives to their mistakes’
+            <br>But the most famous is also the most romantic:
+            <br>Lord Darlington’s
+            <br>‘we are all in the gutter,
+            <br>but some of us are looking at the stars.’</div>
+
+
 
         <a href="https://en.wikipedia.org/wiki/Oscar_Wilde"><img src="star.gif"></a>
 
