--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
               border: 4px solid #D065F0;
               width: 700px;
               left: -10px;
-              top: 30px;
+              top: 120px;
               font-size: 70px;
               font-family: fantasy;
               text-align: right;
@@ -40,29 +40,39 @@
               letter-spacing: 0px;
               z-index: 0;
             }
+            #four {
+              position: fixed;
+              color: white;
+              font-size: 26px;
+              line-height: 30px;
+              left:20vw;
+              top:20px;
+              font-family: times;
+              text-align: right;
+            }
 
           img {
               position: fixed;
-              top: 100px;
+              top: 150px;
               right: 0px;
               width: 200vh;
               opacity: .3;
               border-radius: 200px 900px 30px 5px;
           }
 
-          iframe {
-              position: fixed;
-              width: 30vw;
-              height: 18vw;
-              top: 90px;
-              right: 35vw;
+          #five {
+            position: fixed;
+            top: 20vw;
+            right: 10px;
+            width: 40vh;
+            opacity: .3;
           }
 
           video {
              position: fixed;
-             width: 30vw;
-             top: 300px;
-             right: 3vw;
+             width: 60vw;
+             top: 150px;
+             right: 10vw;
         }
 
           a {
@@ -109,12 +119,17 @@
             <br>‘we are all in the gutter,
             <br>but some of us are looking at the stars.’</div>
 
+            <div id=four>We are all in the gutter,
+              <br>but some of us are looking at the stars
+              <br>         -Oscar Wilde</div>
+
+        <a href="https://onl.la/pXG7v1t"><img src="star.gif"></a>
+
+        <a href="https://docs.google.com/presentation/d/1TH8-_6BYFl4yI3dBUm_6Z-7fhileGDtO/edit?usp=sharing&ouid=108300194910290703919&rtpof=true&sd=true"><img #five src="stars.png"></a>
+
+        <video loop controls src="0306SSM.mov" type="video/mov"></video>
 
 
-        <a href="https://en.wikipedia.org/wiki/Oscar_Wilde"><img src="star.gif"></a>
 
-        <iframe src="https://www.youtube.com/embed/rR5vmKf1pQg"></iframe>
-
-        <a href="huwa.png"><video loop controls src="bubble.mp4" type="video/mp4"></video></a>
 
     </html>
