--- a/index.html
+++ b/index.html
@@ -123,9 +123,9 @@
               <br>but some of us are looking at the stars
               <br>         -Oscar Wilde</div>
 
-        <a href="https://onl.la/pXG7v1t"><img src="star.gif"></a>
+  
 
-        <a href="https://docs.google.com/presentation/d/1TH8-_6BYFl4yI3dBUm_6Z-7fhileGDtO/edit?usp=sharing&ouid=108300194910290703919&rtpof=true&sd=true"><img #five src="stars.png"></a>
+        <a href="https://docs.google.com/presentation/d/1TH8-_6BYFl4yI3dBUm_6Z-7fhileGDtO/edit?usp=sharing&ouid=108300194910290703919&rtpof=true&sd=true"><img src="star.gif"></a>
 
         <video loop controls src="0306SSM.mov" type="video/mov"></video>
 
